Remove Extra Space on Desktop and Fix Result Field Taking Up Empty Space

--- a/css/style.css
+++ b/css/style.css
@@ -667,9 +667,6 @@ hr {
 		cursor: pointer;
 		-webkit-appearance: none;
 	}
-	#mainTable{
-		min-height: 75%;
-	}
 	#warning{
 		font-size: 1em;
 	}
